Add all my files

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,9 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/registertButton"
+        android:text="GO TO REGISTRATION PAGE"
+        android:textAllCaps="false"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        android:background="@drawable/buttons_background"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="LoginActivity"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
