--- a/app/src/main/res/layout/activity_donor_registration.xml
+++ b/app/src/main/res/layout/activity_donor_registration.xml
@@ -169,7 +169,7 @@
                     app:hintTextAppearance="@color/purple_500"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/registerPassword"
+                        android:id="@+id/registertPassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Enter Password"
@@ -182,7 +182,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
-                    android:id="@+id/registertButton"
+                    android:id="@+id/registerButton"
                     android:text="Sign Up"
                     android:textAllCaps="false"
                     android:layout_marginTop="10dp"
